--- a/src/style.css
+++ b/src/style.css
@@ -122,42 +122,86 @@ body {
     margin: 0px;
     padding: 0px;
   }
-
-  .cards {
+  .setup .cards {
+    margin-top: 10%;
+    margin-left: 4%;
     width: 20%;
+  }
+
+  .page {
+    font-size: 20px;
+    font-weight: 500;
+    margin-right: 20%;
+    margin-top: 1%;
+  }
+  .page a span {
+    color: red;
+    font-size: 25px;
+    cursor: pointer;
+  }
+
+  .first .cards{
+    width: 20%;
+    margin-left: 20%;
+    margin-top: 5%;
+    margin-bottom: 2%;
+
+  }
+  .cards {
     background-color: rgb(220, 213, 213);
     border-radius: 5px;
-    margin: 10%;
-    margin-top: 10%;
     box-shadow: 2px solid #66FCF1;
     position: relative;
     display: inline-block;
     }
+  
 
-  @media only screen and (min-width: 300px) and  (max-width: 700px){
+  @media only screen and (min-width: 300px) and  (max-width: 900px){
 
-    .cards .des{
-      column-count:2;
-      column-width: 50%;
+   .first .cards .des{
+      column-count: auto;
+      column-width: auto;
     }
-    .cards {
-      width: 50%;
-      margin:5px;
+    .first .cards {
+     margin-left: 8%;
+      padding: 5px;
       overflow: auto;
-      width: 100%;
+      width: 80%;
       resize: horizontal;
       padding-bottom: 20%;
-      margin-top: 5%;
+      margin-top: 12%;
     }
     .Contact .h3{
       font-size: 20vw;
     }
 
-    .Contact {
-      margin-left: 10px;
+    .details {
+      display: inline-block;
     }
+    .cards .page a{
+      float: right;
+    }
+    .setup .cards {
+     margin-left: 2%;
+      padding: 5px;
+      overflow: auto;
+      width: 70%;
+      resize: horizontal;
+      padding-bottom: 20%;
+      margin-top: 12%;
+
+    }
+    .setup {
+      margin-bottom: 10%;
+    }
+    .connect {
+
+      margin-top: 10%;
+    }
+    
   
   }
+
    
   
   .animate {
@@ -276,16 +320,18 @@ body {
 
 /* let's Connect */
 
+.connect {
+  margin-top: 5%;
+}
+
 .ref {
-  background-color: aqua; /* Green */
-  border: none;
+  background-color: aqua;
+  margin-top: 3%;
   padding: 16px 32px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
   font-size: 25px;
   margin-left: 15%;
-  margin-top: 2%;
+  margin-top: 5%;
   border-radius: 10px ;
   transition-duration: 0.4s;
   cursor: pointer;
